--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.DataPersistence"
         tools:targetApi="31">
         <activity
+            android:name=".database.MainActivity2"
+            android:exported="false" />
+        <activity
             android:name=".database.DatabaseActivity"
             android:exported="false">
             <meta-data
